<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- APP related strings -->
    <string name="app_name">PUM Project</string>

    <!-- CONTROLS -->
    <!-- Buttons -->
    <string name="btn_bt_devices_scan_text">Scan</string>
    <string name="btn_bt_devices_scan_running_text">Scanning...</string>

    <!-- Toggle Buttons -->
    <string name="tgl_bt_toggle_text_on">Bluetooth on</string>
    <string name="tgl_bt_toggle_text_off">Bluetooth off</string>

    <!-- Text Views -->
    <string name="tv_bt_devices_header_text_no_devices">No devices found</string>
    <string name="tv_bt_devices_header_text_devices_found">Pick REJ 006 device to connect to</string>
    <string name="tv_is_paired">Paired</string>
    <string name="tv_is_not_paired">Not Paired</string>
    <string name="tv_id_label_text">ID</string>
    <string name="tv_delay_label_text">Delay</string>
    <string name="btn_offline_meas_text">Offline</string>
    <string name="btn_online_meas_text">Online</string>
    <string name="tv_battery_text">Battery</string>
    <string name="unknown_string">---</string>
    <string name="tv_id_text">ID</string>
    <string name="tv_gadget_text">Gadget</string>

    <string-array name="frequencies_array">
        <item>20 Hz</item>
        <item>50 Hz</item>
        <item>50 Hz</item>
        <item>100 Hz</item>
        <item>200 Hz</item>
        <item>400 Hz</item>
        <item>500 Hz</item>
        <item>700 Hz</item>
        <item>1000 Hz</item>
    </string-array>

</resources>