<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context=".BTDevicesActivity">

    <TextView
        android:id="@+id/tv_bt_devices_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:padding="15dp"
        android:text="@string/tv_bt_devices_header_text_no_devices"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/lv_bt_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_bt_devices_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <ToggleButton
            android:id="@+id/tgl_bt_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/tgl_bt_toggle_text_off"
            android:textOn="@string/tgl_bt_toggle_text_on" />

        <Button
            android:id="@+id/btn_bt_devices_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_bt_devices_scan_text" />

    </LinearLayout>

</RelativeLayout>